<?xml version="1.0"?>
<package format="3">
  <name>localization_test</name>
  <version>0.0.1</version>
  <description>Localization test package using a saved map, AMCL, and replayed LiDAR data.</description>

  <maintainer email="rudrh@todo.todo">rudrh</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>mapping_test</exec_depend>
  <exec_depend>nav2_map_server</exec_depend>
  <exec_depend>nav2_amcl</exec_depend>
  <exec_depend>nav2_lifecycle_manager</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>