<?xml version="1.0"?>
<package format="3">
  <name>map_generator</name>
  <version>0.0.1</version>
  <description>Live map generation package for dual RPLIDAR C1, Arduino odometry, IMU and SLAM Toolbox.</description>

  <maintainer email="rudrh@todo.todo">rudrh</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>

  <exec_depend>python3-serial</exec_depend>
  <exec_depend>sllidar_ros2</exec_depend>
  <exec_depend>ros2_laser_scan_merger</exec_depend>
  <exec_depend>pointcloud_to_laserscan</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>nav2_map_server</exec_depend>
  <exec_depend>robot_localization</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>